--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,8 @@ h1 {
 }
 
 .control-area-btn {
-   background-color: #4caf50; /* Green */
+   background-color: #4caf50;
+   /* Green */
    border: none;
    color: white;
    padding: 10px 20px;
@@ -27,14 +28,19 @@ h1 {
 
 .background-image {
    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://www.falconenergy.co.uk/wp-content/uploads/2023/02/wind-turbines-1.png");
-   background-attachment: fixed; /* This line will keep the gradient fixed while scrolling */
+   background-attachment: fixed;
+   /* This line will keep the gradient fixed while scrolling */
    background-size: cover;
- }
- 
+}
+
 
 .svg-map {
    height: 50vh;
    transition: opacity 0.5s ease-in-out;
+}
+
+.leaflet-container {
+   cursor: pointer !important;
 }
 
 .path-link {
