--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,4 +1,3 @@
-
 <body class="bg-cover bg-no-repeat bg-center background-image flex flex-col items-center">
 
     <!-- TODO: move control to hbs partials, move script to separate script file. -->
@@ -6,38 +5,48 @@
     <div class=" container mx-auto px-4" style="display: block;">
         <div class="h-full text-white flex items-center flex-col pt-12">
             <div class="flex flex-row justify-center items-center text-white font-bold" id="about">
-    <div class="flex flex-col justify-center items-center">
-    <p class="mt-10 w-3/5 text-center">CO2 emissions are the primary driver of global climate change, 
-        and with the increasing demand for electricity, 
-        the need for sustainable practices is more crucial than ever. 
-        By actively lowering your CO2 emissions, you become a part of the solution, 
-        paving the way for a greener and healthier tomorrow. </p>
-        <p class="mt-10 w-3/5 text-center">
-            With our Energy Guide, we empower you to make a positive impact easily. 
-            Discover the optimal times for environmentally friendly energy generation in your area, 
-            and with small adjustments to your daily routine, 
-            contribute to a significant positive change for the environment. 
-        </p>
-        <p class="mt-10 w-3/5 text-center">
-            Here is how it works: </br>
-Choose your control area in the graphic below to receive the recommendation specific to your region. 
-Whether it's charging your electric car, running your washing machine, dryer, or other appliances, 
-simply shift the usage to coincide with high renewable energy generation in your control area. 
-        </p>
-         <p class="mt-10 w-3/5 text-center">
-            Data 
-Our recommendation algorithm analyzes real-time data of wind and solar generation from the 
-<a href="https://www.smard.de/en" target="_blank">German Federal Network Agency</a> to provide you with regional recommendations.  
-        </p>
-        <p class="mt-10 w-3/5 text-center" style="margin-bottom: 220px;">
-            You can also stay effortlessly informed by subscribing to receive your daily recommendations via email. 
-            Enter your email address below and be a part of the movement towards a cleaner, greener future. 
-        </p>
-        </div>
-            </div>
-</div>
-</div>
-<script type="module" src="/js/main2.js"></script>
-</body>
+                <div class="flex flex-col justify-center items-center">
+                    <p class="mt-10 w-3/5 text-center">CO2 emissions are the primary driver of global climate change,
+                        and with the increasing demand for electricity,
+                        the need for sustainable practices is more crucial than ever.
+                        By actively lowering your CO2 emissions, you become a part of the solution,
+                        paving the way for a greener and healthier tomorrow. </p>
+                    <p class="mt-10 w-3/5 text-center">
+                        With our Energy Guide, we empower you to make a positive impact easily.
+                        Discover the optimal times for environmentally friendly energy generation in your area,
+                        and with small adjustments to your daily routine,
+                        contribute to a significant positive change for the environment.
+                    </p>
+                    <p class="mt-10 w-3/5 text-center">
+                        Here is how it works: </br>
+                        Choose your control area in the graphic below to receive the recommendation specific to your
+                        region.
+                        Whether it's charging your electric car, running your washing machine, dryer, or other
+                        appliances,
+                        simply shift the usage to coincide with high renewable energy generation in your control area.
+                    </p>
+                    <p class="mt-10 w-3/5 text-center">
+                        Data
+                        Our recommendation algorithm analyzes real-time data of wind and solar generation from the
+                        <a href="https://www.smard.de/en" target="_blank">German Federal Network Agency</a> to provide
+                        you with regional recommendations.
 
-   
+                        Spondsored by
+                        Gefördert durch:
+                        - Joachim Herz Stiftung
+                        - Open Humboldt Freiräume aus Mitteln der Berlin University Alliance im Rahmen der
+                        Exzellenzstrategie von Bund und Ländern
+                        - Förderung durch die Humboldt-Universität zu Berlin im Rahmen der Oxford-Berlin
+                        Research Partnership
+                    </p>
+                    <p class="mt-10 w-3/5 text-center" style="margin-bottom: 220px;">
+                        You can also stay effortlessly informed by subscribing to receive your daily recommendations via
+                        email.
+                        Enter your email address below and be a part of the movement towards a cleaner, greener future.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script type="module" src="/js/main2.js"></script>
+</body>
