--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/dist/styles.css"> 
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <link rel="icon" href="/images/green-power.png">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@1.0.2"></script>    
   </head>
