--- a/views/about.hbs
+++ b/views/about.hbs
@@ -6,7 +6,7 @@
         <div class="h-full text-white flex items-center flex-col pt-12">
             <div class="flex flex-row justify-center items-center text-white font-bold" id="about">
                 <div class="flex flex-col justify-center items-center">
-                    <p class="mt-10 w-3/5 text-center">CO2 emissions are the primary driver of global climate change,
+                     <!-- <p class="mt-10 w-3/5 text-center">CO2 emissions are the primary driver of global climate change,
                         and with the increasing demand for electricity,
                         the need for sustainable practices is more crucial than ever.
                         By actively lowering your CO2 emissions, you become a part of the solution,
@@ -44,6 +44,8 @@
                         email.
                         Enter your email address below and be a part of the movement towards a cleaner, greener future.
                     </p>
+                    -->
+                    <p class="mt-10 w-3/5 text-center"> work-in-progress - the content will be added soon. </p>
                 </div>
             </div>
         </div>
