--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,17 +16,17 @@
 
     <div class="container mx-auto px-4">
         <div class="h-full w-full text-white flex justify-center items-center flex-col pt-12">
-            <div class="flex items-center justify-center flex-col md:flex-row">
+            {{!-- <div class="flex items-center justify-center flex-col md:flex-row">
                 <h1 class="text-5xl font-bold mb-4">Welcome to a </h1>
                 <h1 class="text-5xl font-bold mb-4 md:ml-3">Cleaner</h1>
                 <h1 class="text-5xl font-bold mb-4 md:ml-3">Tomorrow!</h1>
-            </div>
+            </div> --}}
 
             <p class="text-xl mb-8">Join us to Reduce CO2 Emissions</p>
 
             <div class="h-full flex items-center justify-center flex-col">
-                <h2 class="text-2xl font-bold mb-5 controls-to-hide md:text-3xl">What is your control area?</h2>
-                <h2 class="text-2xl font-bold mb-5 controls-to-hide md:text-3xl">Forecast for {{ currentDate }}:</h2>
+                <h2 class="text-2xl font-bold mb-8 controls-to-hide md:text-3xl">What is your control area?</h2>
+                {{!-- <h2 class="text-2xl font-bold mb-8 controls-to-hide md:text-3xl">Forecast for {{ currentDate }}:</h2> --}}
 
                 <!-- Map container -->
                 <div id="simple-map" style="height: 680px; width: 250%;"></div>
@@ -35,7 +35,7 @@
                 <!-- Result area -->
                 <div id="regionResult" class="region-result text-white text-center mt-4 space-y-5"></div>
 
-                <!-- Subscribe form -->
+                <!-- Subscribe form
                 <div id="subscribeControls" class="text-center mt-8 hidden h-2/5">
                     <p class="m-3">Please leave your email below to subscribe to our daily recommendations</p>
                     <form method="POST" action="" id="emailSubscriptionForm" class="px-5">
@@ -46,7 +46,15 @@
                             class="bg-black text-white font-bold rounded-lg text-lg px-6 py-2 hover:bg-gray-800 transition-colors duration-300">Submit</button>
                     </form>
                 </div>
+                 -->
+
             </div>
+            <p class="text-xl mb-8">
+                Carbon Intensity data provided by
+                <a href="https://www.electricitymaps.com/" target="_blank" class="text-blue-500 underline">
+                    electricitymaps.com
+                </a>
+            </p>
         </div>
     </div>
 
