--- a/views/uk.hbs
+++ b/views/uk.hbs
@@ -12,11 +12,11 @@
 <body class="bg-cover bg-no-repeat bg-center background-image flex flex-col items-center">
 
   <div class="container mx-auto px-4" style="display: block;">
-    <div class="w-full text-white flex flex-col pt-12 pb-12">
+    <div class="w-full text-white flex flex-col md:pt-12 pb-12">
 
       <div class="flex flex-col items-center">
-        <p class="text-xl md:mb-8">Join us to Reduce CO2 Emissions</p>
-        <h2 class="text-2xl font-bold mb-5 controls-to-hide ">Select your UK region</h2>
+        <p class="md:text-xl md:mb-8">Join us to Reduce CO2 Emissions</p>
+        <h2 class="md:text-2xl font-bold mb-5 controls-to-hide ">Select your UK region</h2>
 
         <!-- Leaflet Map -->
         <div id="map"></div>
