exposing green time zone fo the crawling

--- a/views/results.hbs
+++ b/views/results.hbs
@@ -79,4 +79,12 @@
     }
   </script>
 
+  <div id="hiddenData" style="display: none;">
+    <div id="greenTimeZones" class="green-time-class">
+      <!-- Green time zones will be dynamically added here -->
+    </div>
+    <div id="redTimeZones" class="red-time-class">
+      <!-- Red time zones will be dynamically added here -->
+    </div>
+  </div>
 </body>
